--- a/.eslintrc
+++ b/.eslintrc
@@ -11,7 +11,8 @@
         "strict": [2, "global"],
         "max-len": [2, {
             "code": 100,
-            "ignoreUrls": true
+            "ignoreUrls": true,
+            "ignoreRegExpLiterals": true
         }],
         "no-console": [0]
     }
